--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -7,21 +7,18 @@ jobs:
     steps:
 
     - name: Set up Go 1.12
-      uses: actions/setup-go@v1
+      uses: actions/setup-go@master
       with:
         go-version: 1.12
       id: go
 
     - name: Check out code into the Go module directory
-      uses: actions/checkout@v1
+      uses: actions/checkout@master
 
     - name: Get dependencies
       run: |
-        go get -v -t -d ./...
-        if [ -f Gopkg.toml ]; then
-            curl https://raw.githubusercontent.com/golang/dep/master/install.sh | sh
-            dep ensure
-        fi
+        go mod download 
+
     - name: UnitTest
       run: make test
  
