--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,6 @@
 language: go
 go_import_path: github.com/freundallein/drwatcher
 
-env:
-  - GO111MODULE=on
-  - DOCKER_API_VERSION=1.40
 service:
   - docker
 
@@ -11,6 +8,9 @@ jobs:
   include:
     - stage: test
       name: "Unit tests"
+      env:
+        - GO111MODULE=on
+        - DOCKER_API_VERSION="1.40"
       go: 1.13.x
       script: make test
 
